@@ -1215,17 +1215,15 @@ Note that only the mode, history and definitions of the last closed instance wil
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkCheckButton" id="preferences_checkbutton_copy_separator">
-                        <property name="label" translatable="yes">Copy digit separator</property>
+                      <object class="GtkCheckButton" id="preferences_checkbutton_copy_ascii">
+                        <property name="label" translatable="yes">Copy ASCII by default</property>
                         <property name="visible">True</property>
                         <property name="can-focus">True</property>
                         <property name="receives-default">False</property>
-                        <property name="tooltip-text" translatable="yes">Deactivate to remove digit separator when copying result</property>
-                        <property name="margin-bottom">12</property>
                         <property name="use-underline">True</property>
                         <property name="active">True</property>
                         <property name="draw-indicator">True</property>
-                        <signal name="toggled" handler="on_preferences_checkbutton_copy_separator_toggled" swapped="no"/>
+                        <signal name="toggled" handler="on_preferences_checkbutton_copy_ascii_toggled" swapped="no"/>
                       </object>
                       <packing>
                         <property name="left-attach">0</property>
